--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
   
      
   <div class="container home">
+    <nav class="navbar">
+      <h1>Fun Bus</h1>
+      <ul>
+        <li><a class="" href="#">Home</a></li>
+        <li><a class="" href="#">About Us</a></li>
+        <li><a class="" href="#">Blog</a></li>
+        <li><a class="" href="#">Contact</a></li>
+      </ul>
+    </nav>
+    <section class="header-section">
+      <img src="img/fun-bus.jpg" alt="header">
+      <h1>Welcome To Fun Bus!</h1>
+      <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure Wordpress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.
+      </p>
+    </section>
    
     <section class="content-section">
       <div class="text-content">
@@ -39,7 +54,6 @@
         <p>Adventure webdesign pretty design design, excursion cute WordPress blogger design webdesign adventure. Pretty simple traveling fun WordPress wanderlust darn simple organized.</p> 
         <p>Expedition colorful design simple excursion blogger blogger design WordPress design, design organized website theme.</p>
       </div>
-     
     </section>
     <section class="content-destination">
       <h2>Pick Your Destination</h2>
@@ -47,7 +61,6 @@
       <img src="img/destination.jpg" alt="Second slide">
     </section>
     <section class="content-pick">
-
       <div class="destination">
         <h4>Fun In The Sun</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
